hphp/test/slow/eval_order/1499.php.expectf

Fatal error: Call to undefined function foo() in %s/test/slow/eval_order/1499.php on line 4
string(7) "errored"
